# martians

./: calculations.py  formant.py  geogebra-export.ggb  main.py  note.py  playground.ipynb  pyproject.toml  schwa.py  stories.py  streamlitshow.py  utils.py  vowel.csv
schemas/: __init__.py  curve.py  note.py
