[tool.poetry]
name = "martians"
version = "0.1.0"
description = ""
authors = ["Babdus <babdusi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
scipy = "^1.7.3"
streamlit = "^1.3.1"
matplotlib = "^3.5.1"
numpy = "^1.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
